Add information section

--- a/index.html
+++ b/index.html
@@ -18,10 +18,31 @@
             </ul>
         </header>
         <div class="hero">
-            <div class="main-text">This website is awesome</div>
+            <h1>This website is awesome</h1>
             <div class="secondary-text">This website has some subtext that goes under the main title.</div>
             <button>Sign up</button>
-            <img class="hero-image" src="img/pexels-wendy-wei-2350327.jpg" alt="Group of People Performing on Stage Using Musical Instruments">
+            <img class="hero-image" src="img/pexels-wendy-wei-2350327.jpg" alt="group of people performing on stage using musical instruments">
+        </div>
+    </div>
+    <div class="info-container">
+        <h2>Some random information</h2>
+        <div class="cards-container">
+            <div class="card">
+                <img src="img/audience-gd98adb593_1920.jpg" alt="group of people inside disco house">
+                <div class="secondary-text">this is some subtext under some image or illustration</div>
+            </div>
+            <div class="card">
+                <img src="img/pexels-lucas-allmann-442540.jpg" alt="people performing on stage">
+                <div class="secondary-text">this is some subtext under some image or illustration</div>
+            </div>
+            <div class="card">
+                <img src="img/pexels-tuur-tisseghem-613813.jpg" alt="man playing saxophone">
+                <div class="secondary-text">this is some subtext under some image or illustration</div>
+            </div>
+            <div class="card">
+                <img src="img/pexels-big-bag-films-8512685.jpg" alt="woman in white shirt singing">
+                <div class="secondary-text">this is some subtext under some image or illustration</div>
+            </div>
         </div>
     </div>
 </body>
