Add quote section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="styles.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header-hero-container">
@@ -44,6 +44,10 @@
                 <div class="secondary-text">this is some subtext under some image or illustration</div>
             </div>
         </div>
+    </div>
+    <div class="quote-container">
+        <div class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just filling space or maybe people will actually read it. Who knows? All I know it that it looks nice.</div>
+        <h3>- Thor, God of Thunder</h4>
     </div>
 </body>
 </html>
