--- a/index.html
+++ b/index.html
@@ -49,5 +49,15 @@
         <div class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just filling space or maybe people will actually read it. Who knows? All I know it that it looks nice.</div>
         <h3>- Thor, God of Thunder</h4>
     </div>
+    <div class="cta-container">
+        <div class="cta">
+            <h3>Call to action! It's time!</h3>
+            <div class="secondary-text">Sign up for our newsletter by clicking that button over there!</div>
+            <button>Sign up</button>
+        </div>
+    </div>
+    <footer>
+        Copyright &copy; The Odin Project 2022
+    </footer>
 </body>
 </html>
