Edit header-hero styles

--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
             </ul>
         </header>
         <div class="hero">
-            <h1>This website is awesome</h1>
-            <div class="secondary-text">This website has some subtext that goes under the main title.</div>
-            <button>Sign up</button>
-            <img class="hero-image" src="img/pexels-wendy-wei-2350327.jpg" alt="group of people performing on stage using musical instruments">
+            <div class="hero-content">
+                <h1>This website is awesome</h1>
+                <div class="secondary-text">This website has some subtext that goes under the main title.</div>
+                <button>Sign up</button>
+            </div>
+            <div class="hero-image">
+                <img src="img/pexels-wendy-wei-2350327.jpg" alt="group of people performing on stage using musical instruments">
+            </div>
         </div>
     </div>
     <div class="info-container">
