--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="info-container">
-        <h2>Some random information</h2>
+        <h2>Some random information.</h2>
         <div class="cards-container">
             <div class="card">
                 <img src="img/audience-gd98adb593_1920.jpg" alt="group of people inside disco house">
