--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         </div>
     </div>
     <div class="quote-container">
-        <div class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just filling space or maybe people will actually read it. Who knows? All I know it that it looks nice.</div>
-        <h3>- Thor, God of Thunder</h4>
+        <div class="quote-box">
+            <div class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just filling space or maybe people will actually read it. Who knows? All I know it that it looks nice.</div>
+            <h3>- Thor, God of Thunder</h4>
+        </div>
     </div>
     <div class="cta-container">
         <div class="cta">
