--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
     </div>
     <div class="cta-container">
         <div class="cta">
-            <h3>Call to action! It's time!</h3>
-            <div class="secondary-text">Sign up for our newsletter by clicking that button over there!</div>
+            <div class="cta-text">
+                <h3>Call to action! It's time!</h3>
+                <div class="secondary-text">Sign up for our newsletter by clicking that button over there!</div>
+            </div>
             <button>Sign up</button>
         </div>
     </div>
