Edit PAV info in index.html and README.md

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Performing Arts Venue</title>
+    <title>PAV Landing Page</title>
     <link href="styles.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,18 +10,18 @@
 <body>
     <div class="header-hero-container">
         <header>
-            <div class="logo">Header Logo</div>
+            <div class="logo">PAV Logo</div>
             <ul class="navbar">
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="#">What's On</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </header>
         <div class="hero">
             <div class="hero-content">
-                <h1>This website is awesome</h1>
-                <div class="secondary-text">This website has some subtext that goes under the main title.</div>
-                <button>Sign up</button>
+                <h1>Welcome to Performing Arts Venue</h1>
+                <div class="secondary-text">Enjoy spectacular concerts featuring the greatest rock, blues, jazz, and roots music artists at PAV!</div>
+                <button>Buy tickets</button>
             </div>
             <div class="hero-image">
                 <img src="img/pexels-wendy-wei-2350327.jpg" alt="group of people performing on stage using musical instruments">
@@ -29,43 +29,43 @@
         </div>
     </div>
     <div class="info-container">
-        <h2>Some random information.</h2>
+        <h2>Check out our events calendar.</h2>
         <div class="cards-container">
             <div class="card">
                 <img src="img/audience-gd98adb593_1920.jpg" alt="group of people inside disco house">
-                <div class="secondary-text">this is some subtext under some image or illustration</div>
+                <div class="secondary-text">Super Awesome Artist #1</div>
             </div>
             <div class="card">
                 <img src="img/pexels-lucas-allmann-442540.jpg" alt="people performing on stage">
-                <div class="secondary-text">this is some subtext under some image or illustration</div>
+                <div class="secondary-text">Super Awesome Artist #2</div>
             </div>
             <div class="card">
                 <img src="img/pexels-tuur-tisseghem-613813.jpg" alt="man playing saxophone">
-                <div class="secondary-text">this is some subtext under some image or illustration</div>
+                <div class="secondary-text">Super Awesome Artist #3</div>
             </div>
             <div class="card">
                 <img src="img/pexels-big-bag-films-8512685.jpg" alt="woman in white shirt singing">
-                <div class="secondary-text">this is some subtext under some image or illustration</div>
+                <div class="secondary-text">Super Awesome Artist #4</div>
             </div>
         </div>
     </div>
     <div class="quote-container">
         <div class="quote-box">
-            <div class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just filling space or maybe people will actually read it. Who knows? All I know it that it looks nice.</div>
-            <h3>- Thor, God of Thunder</h4>
+            <div class="quote">"Music drives you. It wakes you up, it gets you pumping. And, at the end of the day, the correct tune will chill you down.”</div>
+            <h3>– Dimebag Darrell</h4>
         </div>
     </div>
     <div class="cta-container">
         <div class="cta">
             <div class="cta-text">
-                <h3>Call to action! It's time!</h3>
+                <h3>Don't Miss Out! Buy 🎟️ Today!</h3>
                 <div class="secondary-text">Sign up for our newsletter by clicking that button over there!</div>
             </div>
             <button>Sign up</button>
         </div>
     </div>
     <footer>
-        Copyright &copy; The Odin Project 2022
+        Copyright &copy; The Odin Project & PAV 2022
     </footer>
 </body>
 </html>
